--- a/lab-amber/package.json
+++ b/lab-amber/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.11"
+  },
+  "devDependencies": {
+    "superagent": "^3.8.2"
   }
 }
