--- a/lab-daniel/package.json
+++ b/lab-daniel/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.3"
+    "bcrypt": "^1.0.3",
+    "mongoose": "^5.0.11"
   }
 }
