--- a/lab-daniel/package.json
+++ b/lab-daniel/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.3",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "superagent": "^3.8.2"
   }
 }
