--- a/lab-cody/package.json
+++ b/lab-cody/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "jest": "^22.4.3",
+    "mongoose": "^5.0.11",
     "superagent": "^3.8.2"
   }
 }
