Lots of refactoring, all tests now passing after much hair loss, need to write readme

--- a/lab16-mitch/package.json
+++ b/lab16-mitch/package.json
@@ -13,5 +13,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "btoa": "^1.1.2",
+    "dotenv": "^5.0.1"
+  }
 }
