--- a/lab-ryan/package.json
+++ b/lab-ryan/package.json
@@ -8,6 +8,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "jest": "^22.4.2",
