--- a/lab-alicia/package.json
+++ b/lab-alicia/package.json
@@ -1,21 +1,29 @@
 {
   "name": "lab-alicia",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Author: Alicia Lycan",
   "main": "index.js",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "DEBUG='lab-alicia*' jest",
+    "start": "DEBUG='lab-alicia*' node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "btoa": "^1.1.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "npm": "^5.8.0"
+  },
+  "devDependencies": {
+    "jest": "^22.4.2",
+    "superagent": "^3.8.2"
   }
 }
